@@ -1,5 +1,5 @@
 /* xml.c -- xml output.
-   $Id: xml.c,v 1.48 2004-07-05 22:23:24 karl Exp $
+   $Id: xml.c,v 1.49 2004-07-31 18:49:51 karl Exp $
 
    Copyright (C) 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
 
@@ -90,6 +90,10 @@ element texinfoml_element_list [] = {
   { "acronym",             0, 1, 0 },
   { "acronymword",         0, 1, 0 },
   { "acronymdesc",         0, 1, 0 },
+
+  { "abbrev",              0, 1, 0 },
+  { "abbrevword",          0, 1, 0 },
+  { "abbrevdesc",          0, 1, 0 },
 
   { "tt",                  0, 1, 0 },
   { "code",                0, 1, 0 },
@@ -296,6 +300,10 @@ element docbook_element_list [] = {
   { "acronym",             0, 1, 0 },
   { "",                    0, 1, 0 }, /* ACRONYMWORD */
   { "",                    0, 1, 0 }, /* ACRONYMDESC */
+
+  { "abbrev",              0, 1, 0 },
+  { "",                    0, 1, 0 }, /* ABBREVWORD */
+  { "",                    0, 1, 0 }, /* ABBREVDESC */
 
   { "literal",             0, 1, 0 }, /* TT */
   { "literal",             0, 1, 0 }, /* CODE */
